--- a/src/static/sass/app.scss
+++ b/src/static/sass/app.scss
@@ -70,12 +70,11 @@
 
 // Components
 
+@import "components/components";
 @import "components/typo";
-@import "components/icons";
 @import "components/titles";
 @import "components/buttons";
 @import "components/forms";
-@import "components/images";
 @import "components/modals";
 
 // Pages
