--- a/src/static/sass/components/_components.scss
+++ b/src/static/sass/components/_components.scss
@@ -21,17 +21,19 @@
   padding: 0;
   position: relative;
 
-  @supports not (-webkit-line-clamp: 1) {
-    &::after {
-      background: linear-gradient(to right, rgba($white, 0), rgba($white, 1) 75%);
-      bottom: 0;
-      content: '';
-      display: block;
-      height: $line-height-base * 1em;
-      position: absolute;
-      right: 0;
-      text-align: right;
-      width: 25%;
+  &::after {
+    background: linear-gradient(to right, rgba($white, 0), rgba($white, 1) 75%);
+    bottom: 0;
+    content: '';
+    display: block;
+    height: $line-height-base * 1em;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    width: 25%;
+
+    @supports (-webkit-line-clamp: 1) or (line-clamp: 1) {
+      display: none;
     }
   }
 }
