add modernizr build task. update dependencies

--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -12,7 +12,7 @@ head
   meta(name="viewport" content="width=device-width, initial-scale=1")
   meta(name="description" content="Some description")
   link(href="static/css/main.css" rel="stylesheet")
-  script(src="static/js/vendor/modernizr-custom.js")
+  script(src="static/js/vendor/modernizr.min.js")
 body(class=pageClass)
   include ../modules/header
   main.main
