--- a/src/static/sass/components/_components.scss
+++ b/src/static/sass/components/_components.scss
@@ -14,9 +14,8 @@
 .line-clamp {
   display: block;
   display: -webkit-box;
-  /* autoprefixer: off */
+  /* autoprefixer: ignore next */
   -webkit-box-orient: vertical;
-  /* autoprefixer: on */
   overflow: hidden;
   padding: 0;
   position: relative;
