--- a/src/static/sass/layout/_layout.scss
+++ b/src/static/sass/layout/_layout.scss
@@ -4,19 +4,17 @@ body {
 }
 
 .layout-grid {
-  height: 100%;
+  height: 100vh;
   left: 0;
   position: fixed;
   top: 0;
-  width: 100%;
-  z-index: -1;
+  width: 100vw;
+  z-index: 9999;
 
   [class*="col-"] {
-    background-color: rgba($black, 0.1%);
-    height: 100vh;
-
-    &:nth-of-type(2n) {
-      background-color: rgba($black, 0.05%);
+    div {
+      background-color: rgba(red, 0.1%);
+      height: 100vh;
     }
   }
 }
